Fix padding for wrap

--- a/_sass/_structure.scss
+++ b/_sass/_structure.scss
@@ -18,7 +18,7 @@
 
   @include mq(desktop) {
     max-width: 1200px;
-    padding: 0 100px;
+    padding: 0 50px;
   }
 
   @include mq(screen-xs) {
